--- a/app/src/main/res/layout/view_holder_layout.xml
+++ b/app/src/main/res/layout/view_holder_layout.xml
@@ -2,24 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="wrap_content"
-  android:layout_height="wrap_content">
+  android:layout_height="wrap_content"
+  android:layout_gravity="center">
 
     <ImageView
       android:id="@+id/image"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
       />
 
     <TextView
       android:id="@+id/first"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:textSize="20sp"
+
       />
 
     <TextView
       android:id="@+id/last"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:textSize="20sp"
       />
 
 </LinearLayout>
