--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,11 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:orientation="vertical"
   tools:context="com.volha.myapplication.DetailActivity"
   >
+    
+    <ImageView
+      android:id="@+id/image"
+      android:layout_width="300dp"
+      android:layout_height="300dp"
+      android:layout_gravity="center"
+      />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+      android:id="@+id/name"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="23sp"
+      />
+
+    <TextView
+      android:id="@+id/email"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="18sp"
+      />
+
+    <TextView
+      android:id="@+id/address_one"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
+
+    <TextView
+      android:id="@+id/address_two"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
+
+    <TextView
+      android:id="@+id/phone"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
+
+    <TextView
+      android:id="@+id/dob"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
+
+</LinearLayout>
